# Auto-bind-Python-from-CC-

./: Kconfig  README.md
components/arm64_glibc/: CMakeLists.txt
components/python3.13_maixcam2/: CMakeLists.txt
components/python3.13_maixcam2/include/python3.13/: pyconfig.h
components/python3.13_maixcam2/lib/python3.13/: _sysconfigdata__linux_aarch64-linux-gnu.py
components/python3.13_maixcam2/lib/python3.13/config-3.13-aarch64-linux-gnu/: Makefile
components/python3_lib_maixcam_musl_3.11.6/: CMakeLists.txt
components/python3_lib_maixcam_musl_3.11.6/include/python3.11/: pyconfig.h
examples/demo/: cpp_bind_python.py  project.py  setup.py
examples/demo/doc_tool/: gen_api.py  gen_markdown.py
examples/demo/main/: CMakeLists.txt
examples/demo/main/include/: add.hpp
examples/demo/main/src/: add.cpp  bind_add.cpp  main.cpp
tools/cmake/: project.py
